--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -6,14 +6,17 @@ android {
 
     defaultConfig {
         applicationId "com.example.qrnote"
-        minSdkVersion 16
+        minSdkVersion 26
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -24,12 +27,25 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    // min sdk version을 올려서 zxing-android-embedded가 실행 가능하도록 했다.
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
 
+    implementation "androidx.activity:activity:1.3.1"
+    // Desugaring and multidex is required for API < 21.
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
+    // leakcanary is for development purposes only
+    // https://github.com/square/leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+
+    // AboutLibraries
+    implementation 'com.mikepenz:aboutlibraries:6.2.3'
 }
