--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -48,4 +48,8 @@ dependencies {
 
     // AboutLibraries
     implementation 'com.mikepenz:aboutlibraries:6.2.3'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 }
