--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
+        <activity android:name=".MakeNote">
+        </activity>
         <activity android:name=".LoadingActivity" android:exported="true" tools:node="merge">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
