메모장 수정
Signed-off-by: LHJ1355 <59160920+LHJ1355@users.noreply.github.com>

--- a/client/app/src/main/AndroidManifest.xml
+++ b/client/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
-        <activity android:name=".MakeNote">
+        <activity android:name=".Note.MakeNote">
+        </activity>
+        <activity android:name=".Note.ReadNoteActivity">
         </activity>
         <activity android:name=".LoadingActivity" android:exported="true" tools:node="merge">
             <intent-filter>
